test/files/invalid/bad_union_types.fbs
union A0 {
  A: A0,
  B: A1,
  C: A2,
  D: [bool],
  E: [bool: 1],
  F: bool,
  G: uint8,
  H: float32,
}

struct A1 { x: bool; }
enum A2: uint8 {}
